<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hintTextColor="@color/pink"
            app:boxStrokeColor="@color/pink">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/name"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/pink"
            app:boxStrokeColor="@color/pink">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/username"
                android:layout_marginBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/pink"
            app:boxStrokeColor="@color/pink">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/pink"
            app:boxStrokeColor="@color/pink">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/pink"
            app:boxStrokeColor="@color/pink">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/re_type"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/register_btn"
            android:textAllCaps="false"
            android:text="@string/register" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/show_info_btn"
            android:textAllCaps="false"
            android:text="@string/info" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/info"
            android:clickable="false"
            android:visibility="gone"
            android:textAllCaps="false"
            tools:text="Full Name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/info"
            android:clickable="false"
            android:visibility="gone"
            android:textAllCaps="false"
            tools:text="Username" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/info"
            android:clickable="false"
            android:visibility="gone"
            android:textAllCaps="false"
            tools:text="Email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/info"
            android:clickable="false"
            android:visibility="gone"
            android:textAllCaps="false"
            tools:text="Password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/info"
            android:clickable="false"
            android:visibility="gone"
            android:textAllCaps="false"
            tools:text="Gender" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hide_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/hide_info_btn"
            android:text="@string/hide"
            android:textAllCaps="false"
            android:visibility="gone"/>


    </LinearLayout>


</ScrollView>